--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,14 @@ services:
       MYSQL_DATABASE: sdts3
       MYSQL_USER: sdts3user
       MYSQL_PASSWORD: sdts3pass
+      TZ: America/Sao_Paulo
+      LANG: C.UTF-8
+      MYSQL_CHARSET: utf8mb4
+      MYSQL_COLLATION: utf8mb4_unicode_ci
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 volumes:
   db_data: 
